--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "npm run serve -- --port 4040"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "bootstrap": "4.6",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
