--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "bootstrap": "4.6",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.14",
+    "vue-chartjs": "^3.5.1",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.4.0"
